# ChangeLog for sys-kernel/hardened-sources
# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-kernel/hardened-sources/ChangeLog,v 1.204 2008/01/25 22:32:16 phreak Exp $

*hardened-sources-2.6.23-r6 (25 Jan 2008)

  25 Jan 2008; Christian Heim <phreak@gentoo.org>
  -hardened-sources-2.6.23-r5.ebuild, +hardened-sources-2.6.23-r6.ebuild:
  Revision bump, pulling in the latest genpatches.

*hardened-sources-2.6.23-r5 (24 Dec 2007)

  24 Dec 2007; Christian Heim <phreak@gentoo.org>
  hardened-sources-2.4.35-r2.ebuild, hardened-sources-2.6.20-r6.ebuild,
  hardened-sources-2.6.20-r10.ebuild, hardened-sources-2.6.22-r8.ebuild,
  hardened-sources-2.6.23-r4.ebuild, +hardened-sources-2.6.23-r5.ebuild:
  Revision bump, for the promised updated grsec snapshot. Also changing SRC_URI.

  24 Dec 2007; Christian Heim <phreak@gentoo.org>
  -hardened-sources-2.6.22-r7.ebuild, -hardened-sources-2.6.23.ebuild,
  -hardened-sources-2.6.23-r1.ebuild, -hardened-sources-2.6.23-r2.ebuild,
  -hardened-sources-2.6.23-r3.ebuild:
  Cleaning out some unused, old versions.

  24 Dec 2007; Christian Heim <phreak@gentoo.org>
  hardened-sources-2.6.23-r4.ebuild:
  Marking hardened-sources-2.6.23-r4 stable on amd64 and x86. I know it ain't
  in the tree for long, but there isn't much of a difference between this and
  -r3. Only this revision pulls in 2.6.23.11 and 2.6.23.12 from genpatches.

*hardened-sources-2.6.23-r4 (23 Dec 2007)

  23 Dec 2007; Christian Heim <phreak@gentoo.org>
  +hardened-sources-2.6.23-r4.ebuild:
  Revision bump, grabbing the lastest genpatches release (2.6.23.12 that is).

*hardened-sources-2.6.23-r3 (04 Dec 2007)

  04 Dec 2007; Christian Heim <phreak@gentoo.org>
  +hardened-sources-2.6.23-r3.ebuild:
  Revision bump, pulling in 2.6.23.9.

*hardened-sources-2.6.23-r2 (25 Nov 2007)

  25 Nov 2007; Christian Heim <phreak@gentoo.org>
  +hardened-sources-2.6.23-r2.ebuild:
  Updated patchset, thanks to solar.
