@@ -1,19 +1,16 @@
 DIST genpatches-2.6.20-13.base.tar.bz2 114313 RMD160 e6d41f0e15444f17cfbae55499ea2f079a7913ce SHA1 70e5da99ef34975f705a6041adaa48291d401e0c SHA256 51eb630e880c693c1a2bcc31451d4e8b3c1c2b0b3cc2dad1a7130322197b733f
 DIST genpatches-2.6.20-19.base.tar.bz2 137184 RMD160 b8492ed0b61e75873623c2526b50420614dacf37 SHA1 f625dc35c48c327e1abf2569e1862f5e47b011e7 SHA256 5b3ae1dc77b5ea9cbcc4052f9b89e861408e70bffbafefe19ad521608d19957d
-DIST genpatches-2.6.22-10.base.tar.bz2 77447 RMD160 40735607dbe4143948ad7f6cd71e9d0d539b7402 SHA1 7e4fc9f10e6b53f0bace1ae3da8d9956d43658a9 SHA256 f23b09550b71ec3f43f2a307c486230f573df8c118a6558a4465ce6a1c6a4e97
 DIST genpatches-2.6.23-6.base.tar.bz2 82841 RMD160 120ff54d3ed59be87539ffb43eb7af1bd13cd32d SHA1 b6b1b6d1c06214e5abf7c9d0ab640afe11928420 SHA256 8e1415e8d31f7ea246b5332dc83e1a39336f09b247a7a7d9d9f3a8c0a3ce6f1d
 DIST genpatches-2.6.23-7.base.tar.bz2 83558 RMD160 12347bbc1a3dfd96dbe5cb638c40d646537737f8 SHA1 bc12250baecd513f2c8666b2287c6678673166ee SHA256 0068ddeab387fcdc36ee05b5312a4b4cc6a32adf3d7df4de8fa4b5c6c45cbad6
 DIST hardened-patches-2.4.35-3.extras.tar.bz2 255180 RMD160 1b8f428c0e97260656cb19f0788e3a6412328413 SHA1 0d984a152828dba5d6b528846aa21d0ffb0271f3 SHA256 f25e3e544f807b48e6eebb0911937526f9ffeb143bb82d82887775b6c6411e95
 DIST hardened-patches-2.6.20-5.extras.tar.bz2 211895 RMD160 8a0776259ab5bc0da76b69a32b727a8168817ae0 SHA1 685f6a3ef343764599dfd4bb6e2fb539d5e32855 SHA256 522e0c0db672a0f6287d294b6811396c3d55af710719aae0dacf4d940226835c
 DIST hardened-patches-2.6.20-7.extras.tar.bz2 355172 RMD160 e1bcf07c706facafcf234e26bb9fe4bb316c5e7f SHA1 ad44dd48f5cae116ddb0c8023d352f0f3b5b7a2f SHA256 d639a0d3289df42c7f414b6b41062845f47d2a82dbb0354f8b68e464bb3e98ad
-DIST hardened-patches-2.6.22-6.extras.tar.bz2 220866 RMD160 adabb700b9b2c8761865a6b3a9b695e496e0c05e SHA1 e2d08f539accf6506554fec927aba533d14380c5 SHA256 879def82a3c011341325ff93df225271e21bbaf237ecfb52a4433a6a8da828ef
 DIST hardened-patches-2.6.23-3.extras.tar.bz2 228908 RMD160 0a34da101efec856e9b0a91124aaa5ae2af18c4d SHA1 7cbd076ea5fd429ea9c8e80345d8d717b9117f5a SHA256 e1410d4fcbd72bdb666932b1f58cc02307008d4f9c63d3c6080f719b58f63baf
 DIST hardened-patches-2.6.23-4.extras.tar.bz2 228191 RMD160 91a2b21e50cbaa52f5f3c22c40c9ae7cd403bd9f SHA1 e31a726e361c194d4403659c75a75beedfa8e54b SHA256 f5a52b89a36008bd5406ddd4784f1a802cd54e329ce294cf71c998b2ad9ad0ba
 DIST hardened-sources-2.4.33.4-patches.tar.bz2 255049 RMD160 3e38e6fee8199662ce97fbd278aaa7e17a26f691 SHA1 9d52ae42a9e60541935c9e86455ce96396567eff SHA256 0c6f6c672e051b2ab30eedac2e3f89e3e2701e474dbdbad0dca301186060743c
 DIST linux-2.4.33.tar.bz2 31161078 RMD160 6acdabafecfdc69f3f5b0203eac154ac1c39c44b SHA1 ea444013d54ead1ed366180e9d18d52fbbbe5c6b SHA256 a1d8403a72dbe7a4d63986e71e22e6eeb32fe2e2e949f40c3f9f3bb6496ee47a
 DIST linux-2.4.35.tar.bz2 31104229 RMD160 72e628d6137b5619e37209383f0dc6782168bccb SHA1 0ead64a1d32a1f2ccb69dfb997a9c79aa4a5323e SHA256 d061e8de1043a22013e364dc29cd83ceb545ffe968aa16f6082f546f8e0e1ccf
 DIST linux-2.6.20.tar.bz2 43375937 RMD160 14657ade7be4363143dbd5593f5710d21eda7a03 SHA1 e730979adfb287528263e779c91284659672510d SHA256 2c14ada1ac7d272e03b430d3a530d60fc9ec69cc8252382aa049afba7d2b8558
-DIST linux-2.6.22.tar.bz2 45119878 RMD160 c4b2ca5ee8e71c0f8f1c95f3c9c5f261f2785912 SHA1 39401f195a618f397312d6d84ff9aebe28d99381 SHA256 73c10604c53f1a6ee65ef805293d23903696f8cef864f42d7de9506f0d2ba4c7
 DIST linux-2.6.23.tar.bz2 45488158 RMD160 755690e80751d5de86d260fe05c6eeadde116c4e SHA1 3a186adf13e44415796ab6381aa8979b16a5d5ca SHA256 d4e67c0935ffb2a4158234bff92cc791b83177866009fc9b2214104e0038dbdb
 DIST patch-2.4.33.4.bz2 15344 RMD160 451c589ed294403292e4f09c06eb8e3dbba38750 SHA1 debf72f52133f162872d91cb2248298f2dc29c91 SHA256 b662b1f7ae1dd93af916533882a1bf722119ab11c15819c8d080fcbe313083e6
 EBUILD hardened-sources-2.4.33.4.ebuild 725 RMD160 8ebe65fb3ff152a000a53a771c79a40f233fdc89 SHA1 fbc15b8df74eff5ce200600cf59a91456b444505 SHA256 1e4f8783fe9e9200d17d4dc7bd85a35bcc77756d0019d18e6882fa783dbcbacd
@@ -32,10 +29,6 @@ EBUILD hardened-sources-2.6.20-r6.ebuild 758 RMD160 552195ebb4a97d859d006308a038
 MD5 266892a8d6ab89895ca410a59443e381 hardened-sources-2.6.20-r6.ebuild 758
 RMD160 552195ebb4a97d859d006308a038ccee453a38ce hardened-sources-2.6.20-r6.ebuild 758
 SHA256 125e65721bfa09f034cf8882f0446bb961746511dd7f41fb48389f4dd4019840 hardened-sources-2.6.20-r6.ebuild 758
-EBUILD hardened-sources-2.6.22-r8.ebuild 759 RMD160 4391d3d8d87ed3da3acb7d1e7e9de0c8b138dd3f SHA1 54c475f0e87681339f3cc876de526ca15cb70399 SHA256 b35244a36da9a5ffc7b6ce3b4b90aeec5ec1700049a67c3423949511df162fe6
-MD5 413c453c89ed2599890e13d8b25014ac hardened-sources-2.6.22-r8.ebuild 759
-RMD160 4391d3d8d87ed3da3acb7d1e7e9de0c8b138dd3f hardened-sources-2.6.22-r8.ebuild 759
-SHA256 b35244a36da9a5ffc7b6ce3b4b90aeec5ec1700049a67c3423949511df162fe6 hardened-sources-2.6.22-r8.ebuild 759
 EBUILD hardened-sources-2.6.23-r4.ebuild 758 RMD160 942bbafa322b5406d48b4f2b0f8c533fa49c68a0 SHA1 d6534b827531f44b578b7dfc4d8acb693a888db0 SHA256 fa069eb4bf329fe35f691114c0493bced0931ca77e9a90ed8cf9845b350c7586
 MD5 6cadc43be87a8d4e74fce8c9abb9237c hardened-sources-2.6.23-r4.ebuild 758
 RMD160 942bbafa322b5406d48b4f2b0f8c533fa49c68a0 hardened-sources-2.6.23-r4.ebuild 758
@@ -44,10 +37,10 @@ EBUILD hardened-sources-2.6.23-r6.ebuild 760 RMD160 bc0737b948589ff9027ee6776e73
 MD5 c651edbd2402a005a468caef23984f74 hardened-sources-2.6.23-r6.ebuild 760
 RMD160 bc0737b948589ff9027ee6776e73f7d1d4a69581 hardened-sources-2.6.23-r6.ebuild 760
 SHA256 2ce59ceeb8e6664d4c163829bfe3b2071fce4f0906b97ddb490b295083c6d66b hardened-sources-2.6.23-r6.ebuild 760
-MISC ChangeLog 45812 RMD160 d7fb93d8ea94ae06d5f54c0357659767476bd1b3 SHA1 141d39368cf1bd065db14b8689c18b388fe4f3bb SHA256 089e54e0c2be2de262716ffd2870f08424aa10fa3b45d1a86f56e88db70b38c1
-MD5 98a49cd2284a5665f45cfebede17c669 ChangeLog 45812
-RMD160 d7fb93d8ea94ae06d5f54c0357659767476bd1b3 ChangeLog 45812
-SHA256 089e54e0c2be2de262716ffd2870f08424aa10fa3b45d1a86f56e88db70b38c1 ChangeLog 45812
+MISC ChangeLog 45929 RMD160 6673bf8524c8575d55b8a0d1e165fc345159e4c8 SHA1 faea9cc1483c1fb0081c134d24ff25ac7ce0e3d4 SHA256 7d9d2e70b63a13b720105a4cf20f2803874e2eb73d6301b9e252078d55b28ac7
+MD5 12044b93dd12f48b1e285044827a99c2 ChangeLog 45929
+RMD160 6673bf8524c8575d55b8a0d1e165fc345159e4c8 ChangeLog 45929
+SHA256 7d9d2e70b63a13b720105a4cf20f2803874e2eb73d6301b9e252078d55b28ac7 ChangeLog 45929
 MISC metadata.xml 455 RMD160 7e99213d8d2a9e6f844c2aa92be8ca7c7b45d685 SHA1 a5a7d0467af863fc8a3e93582a56b1de13a85db9 SHA256 8f36f5a1345850d88df0140d06a381172d5084df1c9aae1fc12911da628f9709
 MD5 be98d1dd208d64aafaac946e30e78254 metadata.xml 455
 RMD160 7e99213d8d2a9e6f844c2aa92be8ca7c7b45d685 metadata.xml 455
@@ -64,9 +57,6 @@ SHA256 1cf396965f105b829ccb3056116f8fb48788c777fd2ba019504ae039d6e416b4 files/di
 MD5 4a1eeea6d7019d7892ad3c37e104eda1 files/digest-hardened-sources-2.6.20-r6 828
 RMD160 f0b8f6bacf9b3e0be688446594f37ab8b76bdd01 files/digest-hardened-sources-2.6.20-r6 828
 SHA256 40eafaa88268cb0d8a8bdccedd42d3da97e200b2bb9a0785a8b53b09b50459b8 files/digest-hardened-sources-2.6.20-r6 828
-MD5 1c8bc4cbdde0e51ea916e534a041f8b0 files/digest-hardened-sources-2.6.22-r8 825
-RMD160 67a897d52bf88128a8d5433db7c4d2aee9d98ab5 files/digest-hardened-sources-2.6.22-r8 825
-SHA256 5a43853842db9fdb0fbdc6d97115ce31ed3d8f9b1b301855b92e1ad9666f3cb0 files/digest-hardened-sources-2.6.22-r8 825
 MD5 bafa54692a0b3ee17def9098a801a444 files/digest-hardened-sources-2.6.23-r4 822
 RMD160 d97c7f2ef209cc669ea8fb86a29732a05ca39ae0 files/digest-hardened-sources-2.6.23-r4 822
 SHA256 c55b5c563da12a99604cd3c5221235465bd7d7a18486bc534e2cb2a4b69f17c0 files/digest-hardened-sources-2.6.23-r4 822
