@@ -1,9 +1,0 @@
-MD5 d84d74515bd8f9e8b9a148265f73cb0c genpatches-2.6.22-10.base.tar.bz2 77447
-RMD160 40735607dbe4143948ad7f6cd71e9d0d539b7402 genpatches-2.6.22-10.base.tar.bz2 77447
-SHA256 f23b09550b71ec3f43f2a307c486230f573df8c118a6558a4465ce6a1c6a4e97 genpatches-2.6.22-10.base.tar.bz2 77447
-MD5 b74b20629fa7de1144ba84113d700a1b hardened-patches-2.6.22-6.extras.tar.bz2 220866
-RMD160 adabb700b9b2c8761865a6b3a9b695e496e0c05e hardened-patches-2.6.22-6.extras.tar.bz2 220866
-SHA256 879def82a3c011341325ff93df225271e21bbaf237ecfb52a4433a6a8da828ef hardened-patches-2.6.22-6.extras.tar.bz2 220866
-MD5 2e230d005c002fb3d38a3ca07c0200d0 linux-2.6.22.tar.bz2 45119878
-RMD160 c4b2ca5ee8e71c0f8f1c95f3c9c5f261f2785912 linux-2.6.22.tar.bz2 45119878
-SHA256 73c10604c53f1a6ee65ef805293d23903696f8cef864f42d7de9506f0d2ba4c7 linux-2.6.22.tar.bz2 45119878
